# fuckyou-spam-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
.github/workflows/: ci.yml  release.yml  rocky-linux-build.yml
docs/: ARCHITECTURE.md
scripts/: compose-down.sh  compose-up.sh
src/: app.rs  main.rs  web_content.rs
src/ai/: client.rs  inference.rs  mod.rs
src/config/: env.rs  loader.rs  mod.rs
src/db/: mod.rs  whitelist.rs
src/domain/: message.rs  mod.rs  types.rs
src/infrastructure/: directories.rs  instance_guard.rs  logging.rs  mod.rs  notifier.rs  shutdown.rs  updater.rs
src/tasks/: mod.rs  processor.rs  queue.rs  scheduler.rs
src/telegram/: handler.rs  mod.rs  types.rs  utils.rs
