[package]
name = "fuckyou-spam-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10"
regex = "1.11"
url = "2.5"
once_cell = "1.19"
parking_lot = "0.12"
futures = "0.3"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
tokio-cron-scheduler = "0.10.0"
teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler"] }
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
dom_smoothie = "0.13"
